--- a/config/config.json
+++ b/config/config.json
@@ -2,22 +2,25 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "react",
-    "host": "localhost",
+    "database": "doctordb",
+    "host": "44.197.229.238",
+    "port": 3333 ,
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "password": "root",
+    "database": "doctordb",
+    "host": "44.197.229.238",
+    "port": 3333,
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "password": "root",
+    "database": "doctordb",
+    "host": "44.197.229.238",
+    "port": 3333 ,
     "dialect": "mysql"
   }
 }
